feat: add RaffleGetOne
