# src/routers/routerRaffle.js
@@ -3,6 +3,8 @@ import RaffleCreateValidator from "../middlewares/Validators/RaffleValidatos/Raf
 import RaffleCreateController from "../controllers/RaffleController/RaffleCreateController.js";
 import TokenAuthenticator from "../middlewares/Validators/TokenAuthenticator.js";
 import RaffleGetAllController from "../controllers/RaffleController/RaffleGetAllController.js";
+import ValidatorID from "../middlewares/Validators/ValidatorID.js";
+import RaffleGetOneController from "../controllers/RaffleController/RaffleGetOneController.js";
 const router = Router();
 
 router.post(
@@ -13,5 +15,7 @@ router.post(
 );
 
 router.get("/", TokenAuthenticator, RaffleGetAllController);
+
+router.get("/:id", TokenAuthenticator, ValidatorID, RaffleGetOneController);
 
 export default router;
